--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,18 @@ header {
     font-size: 1.8em;
     font-weight: bold;
 }
+
+.green-glow {
+    border: 4px solid #38bd5d;
+    box-shadow: 0 0 20px #6ed48b;
+}
+
+.red-glow {
+    border: 4px solid #bd3855;
+    box-shadow: 0 0 20px #d46e84;
+}
+
+.grey-glow {
+    border: 4px solid #727272;
+    box-shadow: 0 0 20px #a5a5a5;
+}
